--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <!-- UPDATED: Changed text-primary-500 to text-white for better contrast -->
             <a href="#" class="text-2xl font-bold text-white hover:text-primary-500 transition-colors rounded-lg p-1">
-                Casa de Marks
+               <img src="CasaDeMarks-512x512.png" alt="Smiley face" width="64" height="64" style="vertical-align:middle"> Casa de Marks
             </a>
             <nav class="hidden md:flex space-x-6">
                 <a href="#focus-areas" class="text-gray-300 hover:text-white transition-colors rounded-lg p-2">Our Focus</a>
