--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <header class="bg-dark-card shadow-lg sticky top-0 z-10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <!-- UPDATED: Changed text-primary-500 to text-white for better contrast -->
+            <img src="CasaDeMarks-512x512.png" alt="Faith-Work-Growth" width="100" height="100" style="vertical-align:middle">
             <a href="#" class="text-2xl font-bold text-white hover:text-primary-500 transition-colors rounded-lg p-1">
-               <img src="CasaDeMarks-512x512.png" alt="Smiley face" width="64" height="64" style="vertical-align:middle"> Casa de Marks
+               Casa de Marks
             </a>
             <nav class="hidden md:flex space-x-6">
                 <a href="#focus-areas" class="text-gray-300 hover:text-white transition-colors rounded-lg p-2">Our Focus</a>
